# neovim.directory

./: .gitignore  Cargo.toml  README.md  components.json  justfile  package.json  plugins.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yaml
client/: index.html
client/public/: plugins.json
client/src/: App.tsx  main.tsx
client/src/components/: categories.tsx  loading-indicator.tsx  mode-toggle.tsx
client/src/components/ui/: dropdown-menu.tsx  spinner.tsx
client/src/lib/: types.ts  utils.test.ts  utils.ts
src/: arguments.rs  main.rs  plugin.rs  repository.rs  subcommand.rs
src/subcommand/: add.rs  index.rs
